updated year, updated falcon link, fixed z-index for resume

--- a/src/app/components/resume/resume.component.css
+++ b/src/app/components/resume/resume.component.css
@@ -9,7 +9,7 @@
   height: fit-content;
   width: 100%;
   scroll-behavior: smooth;
-  z-index: 5;
+  z-index: 5000;
 }
 .background {
   position: fixed;
